Update dependency